fix: chevron alignment

--- a/packages/styles/scss/components/list-box/_list-box.scss
+++ b/packages/styles/scss/components/list-box/_list-box.scss
@@ -405,7 +405,7 @@ $list-box-menu-width: convert.to-rem(300px);
     block-size: convert.to-rem(24px);
     cursor: pointer;
     inline-size: convert.to-rem(24px);
-    inset-inline-end: $spacing-03;
+    inset-inline-end: $spacing-04;
     outline: none;
     transition: transform $duration-fast-01 motion(standard, productive);
   }
@@ -827,7 +827,7 @@ $list-box-menu-width: convert.to-rem(300px);
     display: none;
     fill: $icon-primary;
     inset-block-start: 50%;
-    inset-inline-end: convert.to-rem(12px);
+    inset-inline-end: convert.to-rem(16px);
     transform: translateY(-50%);
   }
 
